--- a/index.html
+++ b/index.html
@@ -3,67 +3,311 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>SurePower</title>
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/css/font-awesome.css">
     <link rel="stylesheet" href="css/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
+    <title>NoSweat</title>
     </head>
     <body>
     <header>
-     <div class="header__top">
-        <div class="contact-information">
-            <div class="city">
-                <span>Philadelphia<i class="fa fa-angle-down" aria-hidden="true"></i></span>
+
+        <div class="promo">
+            <p>this is where the promo bar will appear</p>
+            <div class="close"></div>
             </div>
-            <div class="phone-adress">
-                <span><i class="fa fa-phone" aria-hidden="true"></i><b>Toll-free</b>: 800-455-0054</span>
-                <span><i class="fa fa-location-arrow" aria-hidden="true"></i>200 Industrial Highway Ridley Park, PA 19078 </span>
+        <div class="nav-logo clearfix">
+            <div class="logo-images">
+                <div class="logo">
+                    <img src="img/logo.png">
+                </div>
+                <div class="logo-AmMade">
+                    <img src="img/americanMade.png">
+                </div>
+            </div>
+            <div class="shop-cart">
+                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+            </div>
+            <div class="nav-menu clearfix">
+                <nav>
+                    <label class="menu" for="menu-item">
+                    <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
+                    </label>
+                    <input id="menu-item" type="checkbox">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">How It Works</a></li>
+                        <li><a href="#">Shop Now</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
-        <div class="social-icons">
-            <ul>
-                <li><a href="https://www.google.com/intl/ru/gmail/about/"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
-                <li><a href="https://www.youtube.com/"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-                <li><a href="https://plus.google.com/discover?hl=ru"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                <li><a href="https://www.linkedin.com/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                <li><a href="https://twitter.com/?lang=ru"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-            </ul>
-        </div>
-    </div>
-        <div class="header_middle">
-        <div class="logo"><img src="img/Layer%205.png"></div>
-        <div class="rigth_middle_content">
-            <div class="right_block">
-            <ul>
-                <li><i class="fa fa-check-circle-o" aria-hidden="true"></i>
-                <p>Certified</p>
-                    <div class="sub">Subtitle 1</div>
-                </li>
-                <li><i class="fa fa-check-circle-o" aria-hidden="true"></i>
-                   <p>EnerSys Sapplier</p>
-                    <div class="sub">Subtitle 2</div></li>
-                <li>
-                <i class="fa fa-check-circle-o" aria-hidden="true"></i>
-                    <p>Emergency Service</p>
-                    <div class="sub">Subtitle 3</div>
-                </li>
-            </ul>
+        <div class="slider">
+            <div class="slider-backgr">
+                <img src="img/sliderBackground_effects2.png">
+            </div>
+            <div class="slider_content">
+                <h1>sweat absorbing</h1>
+                <div class="arrow-text">
+                    <p>Disposable Hat and helmet Liners.</p>
+                    <div class="arrow">
+                        <div class="left-arrow">
+                            <i class="fa fa-caret-left" aria-hidden="true"></i>
+                        </div>
+                        <div class="right-arrow">
+                            <i class="fa fa-caret-right" aria-hidden="true"></i>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-            <ul class="menu-main">
-    
-                    <li><a href="">home</a></li>
-                    <li><a href="">about</a></li>
-                     <li><a href="">products</a></li>
-                    <li><a href="">services</a></li>
-                    <li><a href="">rentals</a></li>
-                    <li><a href="">learning</a></li>
-                     <li><a href="">contact</a></li>
-                    </ul>
-                        
     </header>
-    </body>
+    <main>
+        <div class="tech">
+            <h1>tech features</h1>
+            <div class="features-opt">
+                <div>
+                    <img src="img/features_ClearVision.png">
+                    <p>Clear Vision</p>
+                </div>
+                <div>
+                    <img src="img/features_FogControl.png">
+                    <p>FOG Control</p>
+                </div>
+                <div>
+                    <img src="img/features_Lightweight.png">
+                    <p>Thin, Soft & <br> Lightweight</p>
+                </div>
+                <div>
+                    <img src="img/features_SweatStopper.png">
+                    <p>Sweat Stopper™ <br> <em> Locks in Sweat</em></p>
+                </div>
+                <div>
+                    <img src="img/features_Breathable.png">
+                    <p>Breathable</p>
+                </div>
+            </div>
+        </div>
+        <div class="toogles">
+            <div class="toogles-container">
+                <div>
+                    <div class="toogles_img_container img_width_100procent">
+                        <img src="img/performance.png">
+                    </div>
+                    <p>performance</p>
+                </div>
+                <div>
+                    <div class="toogles_img_container img_height_100procent">
+                        <img src="img/safety.png">
+                    </div>
+                    <p>safety</p>
+                </div>
+                <div>
+                    <div class="toogles_img_container img_height_100procent">
+                        <img src="img/hygiene.png">
+                    </div>
+                    <p>hygiene</p>
+                </div>
+            </div>
+
+        </div>
+        <div class="game-changer">
+            <div class="text-game-changer">
+                <div class="game-changer-content">
+                    <h1>game changer</h1>
+                    <h2>SWEAT PROTECTION. DELIVERED.</h2>
+                    <p>Keeps sweat out of your eyes</p>
+                    <p>Reduces fogging</p>
+                    <p>Helps prevent sweat stains</p>
+                    <p>Thin, soft and lightweight</p>
+                    <p>Helps with acne & skin irritation</p>
+                </div>
+                <div>
+                    <div class="price">
+                        Starting at only <br>
+                        $4.99 for a 3-pack
+                    </div>
+                    <div class="charge-button">
+                        Shop Now
+                    </div>
+                    <div class="flag-US">
+                        <img src="img/americanMade2.png">
+                    </div>
+                </div>
+            </div>
+            <div class="game-changer-video">
+                <div class="player">
+                        <div class="player-expansion"></div>
+                        <iframe class="player-link" src="https://player.vimeo.com/video/242337463" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    </div>
+            </div>
+        </div>
+        <div class="middle-brands">
+            <h1>Used by the pros</h1>
+            <div class="brands">
+                <div><img src="img/usedBy1.png"></div>
+                <div><img src="img/usedBy2.png"></div>
+                <div><img src="img/usedBy3.png"></div>
+                <div><img src="img/usedBy4.png"></div>
+                <div><img src="img/usedBy5.png"></div>
+            </div>
+            <div class="sircles">
+                <div class="sircle current-circle"></div>
+                <div class="sircle"></div>
+                <div class="sircle"></div>
+            </div>
+        </div>
+        <div class="photo-insta-block">
+            <div>
+                <div class="icon-insta"><i class="fa fa-instagram" aria-hidden="true"><a href="#"></a></i></div>
+                <div class="insta-tag">#nosweatco</div>
+                <div class="photo_block">
+                    <div><img src="img/instaPhoto1.png"></div>
+                    <div><img src="img/instaPhoto2.png"></div>
+                    <div><img src="img/instaPhoto3.png"></div>
+                    <div><img src="img/instaPhoto4.png"></div>
+                    <div><img src="img/instaPhoto5.png"></div>
+                    <div><img src="img/instaPhoto6.png"></div>
+                    <div><img src="img/instaPhoto7.png"></div>
+                    <div><img src="img/instaPhoto8.png"></div>
+                </div>
+               </div>
+        </div>
+        <div class="ads">
+            <div class="hat-liner">
+                <div class="hatliner-info">
+                    <img src="img/hatItems_info1.png">
+                </div>
+                <div class="hatliner-photo">
+                    <img class="liners-background" src="img/item1.png">
+                    <img class="liner-item" src="img/items_mask1.png">
+                    <img class="liner-effects" src="img/items_mask2.png">
+                    <p>Hat Liners</p>
+                    <div class="liner-button">
+                        Buy Now
+                    </div>
+                </div>
+            </div>
+            <div class="hat-liner">
+                <div class="hatliner-info">
+                    <img src="img/hatItems_info2.png">
+                </div>
+                <div class="hatliner-photo">
+                    <img class="liners-background" src="img/item2.png">
+                    <img class="liner-item" src="img/items_mask1.png">
+                    <img class="liner-effects" src="img/items_mask2.png">
+                    <p>Helmet Liners</p>
+                    <div class="liner-button">
+                        Buy Now
+                    </div>
+                </div>
+            </div>
+            <div class="hat-liner">
+                <div class="hatliner-info">
+                    <img src="img/hatItems_info3.png">
+                </div>
+                <div class="hatliner-photo">
+                    <img class="liners-background" src="img/item3.png">
+                    <img class="liner-item" src="img/items_mask1.png">
+                    <img class="liner-effects" src="img/items_mask2.png">
+                    <p>Hard Hat Liners</p>
+                    <div class="liner-button">
+                        Buy Now
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="promo-video">
+            <div class="video-image">
+                <img src="img/specificationVideo.png">
+            </div>
+            <div class="promo-video-text">
+                <h1>SWEAT PROTECTION. DELIVERED.</h1>
+                <p>click play to watch the video.</p>
+                <div class="play-button">
+                    <img src="img/btn-play.png">
+                </div>
+            </div>
+        </div>
+        <div class="brand-feature">
+            <h1>we’ve been featured in</h1>
+            <div class="brands">
+                <div><img src="img/usedBy1.png"></div>
+                <div><img src="img/usedBy2.png"></div>
+                <div><img src="img/usedBy3.png"></div>
+                <div><img src="img/usedBy4.png"></div>
+                <div><img src="img/usedBy5.png"></div>
+            </div>
+            <div class="sircles">
+                <div class="sircle current-circle"></div>
+                <div class="sircle"></div>
+                <div class="sircle"></div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="footer-block">
+            <div class="footer-info">
+                <div class="footer-links clearfix">
+                    <div class="post-send-block">
+                        <h1>Stay in the loop</h1>
+                        <p>Get discounts straight to your inbox.</p>
+                        <div class="form-block">
+                            <form action="">
+                                <input type="text">
+                            </form>
+                            <div class="button-send">
+                                <i class="fa fa-paper-plane" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="links">
+                        <div><a href="#">About us</a></div>
+                        <div><a href="#">Become an Affiliate</a>e</div>
+                        <div><a href="#">Retail Sales Inquiries</a></div>
+                        <div><a href="#">Blog</a></div>
+                        <div><a href="#">Terms & Privacy Policy</a></div>
+                    </div>
+                </div>
+
+                <div class="contacts">
+                    <div class="contact-info">
+                        <h1>Contact Information </h1>
+                        <p>If you have any questions about our products, or you want
+                            to follow up on your existing order status,
+                            please contact us via the following:</p>
+                    </div>
+                    <div class="footer-adress">
+                        <div class="location">
+                            <h1>location</h1>
+                            <p>5421 Feltl Rd, Suite 160, Minnetonka, MN 55343</p>
+                        </div>
+                        <div class="phone">
+                            <h1>phone</h1>
+                            <p>1 (615) 697-9328</p>
+                        </div>
+                        <div class="email">
+                            <h1>email</h1>
+                            <p>Info@NoSweatCo.com </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="no-sweat-copywrite clearfix">
+                <div class="copywrite-text">
+                    <p>©2016 NoSweat. All Rights Reserved.&nbsp;-&nbsp;Patented. Other Patents Pending.</p>
+                </div>
+                <div class="social-icons">
+                    <p>
+                        <a href="https://uk-ua.facebook.com/"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/?hl=ru"><i class="fa fa-instagram"></i></a>
+                        <a href="https://twitter.com/?lang=ru"><i class="fa fa-twitter"></i></a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+</body>
 </html>
